# meetily-community

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  PHASE10_COMPLETE.md  PHASE11_COMPLETE.md  PHASE12_COMPLETE.md  PHASE13_COMPLETE.md  PHASE14_COMPLETE.md  PHASE1_ANALYSIS.md  PHASE2_COMPLETE.md  PHASE2_SERVICE_DESIGN.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  PROJECT_COMPLETE.md  WEB_APP_CONVERSION.md  WEB_APP_README.md  WEB_APP_READY.md  deploy-meetily-full.sh  deploy.sh  docker-compose.yml  load_test.js  reconfigure-ports.sh  setup-meetily-backend.sh  start-meetily-backend.sh  start-web-app.sh
server/: .env.example  API_DOCUMENTATION.md  Cargo.toml
server/migrations/: 001_recordings.sql  002_transcripts.sql  003_diarization.sql  004_summaries.sql  005_embeddings.sql  006_conversations.sql  007_analytics.sql  008_authentication.sql
server/src/: main.rs
server/src/api/: handlers.rs  mod.rs  openapi.rs  routes.rs  state.rs
server/src/api/handlers/: analytics.rs  auth.rs  chat.rs  meetings.rs  recordings.rs  search.rs  summaries.rs  transcripts.rs
server/src/auth/: mod.rs
server/src/config/: mod.rs
server/src/di/: mod.rs
server/src/error/: error.rs  handlers.rs  mod.rs
server/src/repositories/: mod.rs
server/src/repositories/embedding/: mod.rs
server/src/repositories/meeting/: mod.rs
server/src/services/: mod.rs
server/src/services/analytics/: analytics_service.rs  mod.rs
server/src/services/chat/: chat_service.rs  mod.rs
server/src/services/diarization/: diarization_service.rs  mod.rs
server/src/services/embedding/: embedding_service.rs  mod.rs
server/src/services/recording/: mod.rs  recording_service.rs  tests.rs
server/src/services/search/: mod.rs
server/src/services/semantic_search/: mod.rs  semantic_search_service.rs
server/src/services/summary/: mod.rs  summary_service.rs
server/tests/: api_integration_test.rs  auth_service_test.rs  recording_service_test.rs  semantic_search_test.rs
(+15 files in other folders)
